# tflite-neutron-delegate

./: CMakeLists.txt  README.md  SCR.txt  enum_mapping.h  neutron_delegate.cc  neutron_delegate.h  neutron_delegate_adaptor.cc  neutron_delegate_utils.cc  neutron_delegate_utils.h  simple_delegate.cc
cmake/modules/: Findtensorflow.cmake
